# litestar-realworld

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  migration-plan.md  pyproject.toml  workshop-progress.md  workshop-tutorial.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/test-from-spec/: SKILL.md
.claude/skills/validate-spec/: SKILL.md
Conduit/: exception_handlers.py  settings.py
Conduit/auth/: jwt_auth.py  password_helper.py
Conduit/db/: article_queries.py  comment_queries.py  favorite_queries.py  models.py  tag_queries.py  user_queries.py
Conduit/routes/: article_controller.py  profile_controller.py  tag_controller.py  user_controller.py
Conduit/schemas/: request_schemas.py
app/: exception_handlers.py  main.py  schemas.py  settings.py
app/auth/: jwt_auth.py  password_helper.py
app/db/: article_queries.py  comment_queries.py  favorite_queries.py  models.py  queries.py  tag_queries.py  user_queries.py
app/routes/: article_controller.py  profile_controller.py  tag_controller.py  user_controller.py
app/schemas/: request_schemas.py  response_schemas.py
openspec/specs/comments-and-favorites/: spec.md
openspec/specs/user-auth/: spec.md
tests/: conftest.py
tests/test_routes/: test_article_controller.py  test_article_happy_path.py  test_comments_favorites_happy_path.py  test_e2e_scenarios.py  test_profile_controller.py  test_profile_happy_path.py  test_tag_controller.py  test_user_controller.py  test_user_happy_path.py
(+10 files in other folders)
