[project]
name = "litestar-realworld"
version = "0.1.0"
description = "RealWorld Conduit API implemented with Litestar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "litestar[jwt,standard]>=2.17.0",
    "psycopg>=3.2.10",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "ty>=0.0.1a22",
]

[tool.ruff.lint]
extend-select = ["I"]
