[project]
name = "litestar-realworld"
version = "0.1.0"
description = "RealWorld Conduit API implemented with Litestar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "litestar[jwt,standard]>=2.17.0",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.43",
    "ty>=0.0.1a22",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"